Version 0.4.7, 2009-10-15
-------------
+ Better universal binary building (Mac OS X)
+ Linux: Modification date/time (UTC and Local)
x ZtringListList: CSV write with quoted strings was wrong
x Ztring: GUID to string was wrong
x Linux build script were a bit broken
x File: file existence test was broken

Version 0.4.6, 2009-09-25
-------------
+ Thread with Linux (base)
+ File: ignoring hidden files
+ Ztring: To_CC4, To_UUID
x ZtringListList: better CSV compatibility
x File, Open: const input
x intxToLittleEndian
x Correcting some warnings

Version 0.4.5, 2009-09-05
-------------
+ libzen.pc correction

Version 0.4.4, 2009-09-01
-------------
+ Dir::GetAllFileNames() was listing all dir if filename does not exist
+ Support of more platforms (fmodf)

Version 0.4.3, 2009-07-03
-------------
+ OpenSolaris support
+ Path separator
+ Ztring: handling of another format of date
+ Ztring: Changed UUID to GUID, Added UUID (in the right order)
+ Mac OS X: Creation of universal and 10.4 compatible binaries option

Version 0.4.2, 2009-04-17
-------------
+ File: Local modified/created date

Version 0.4.1, 2009-04-03
-------------
+ Dir: Option for GetAllFileNames (API incompatible change)

Version 0.4.0, 2009-03-20
-------------
+ Ztring: Radix option for To_xxx() (API incompatible change)

Version 0.3.8, 2009-02-13
-------------
x UTF-8 conversion replacement (was buggy with Debian Lenny, why?)
x Big files seeking on Linux
x Sometimes memory corruption with Ztring

Version 0.3.7 2009-01-30
-------------
+ Some additional helpers for Ztring
x Managing transformation from Unicode to local with unsupported characters

Version 0.3.6 2009-01-19
-------------
+ HTML protocol basic stuff
+ HTTP protocol helpers
x Crash in Ztring::Trim()
x Code cleanup

Version 0.3.5 2008-12-09
-------------
+ mipsel CPU support
+ Better Linux integration
+ rpm stuff (thanks to oc2pus http://packman.links2linux.org)
+ deb stuff
x Code cleanup

Version 0.3.4.0 2008-10-17
---------------